Add author email

--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
     "mangle",
     "string"
   ],
-  "author": "Oskari Virtanen",
+  "author": "Oskari Virtanen <oskari.virtanen@gmail.com>",
   "license": "MIT"
 }
