--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "mangle",
   "version": "1.0.0",
-  "description": "A string mangler",
+  "description": "A string mangle",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha tests.js"
   },
   "keywords": [
     "mangle",
     "string"
   ],
   "author": "Oskari Virtanen <oskari.virtanen@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "expect.js": "^0.3.1",
+    "mocha": "^2.2.5"
+  }
 }
